discussion/kv_engine/171649/171649_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50988: Limit compaction concurrency with LimitedConcurrencyTask

Separate responsibility for limiting CompactTask concurrency from
compaction delay management.

CompactTasks now acquire tokens from a cb::AwaitableSemaphore, or will
snooze() if none are available. Once tokens are available, the task
will be notified to run immediately.

If compaction is requested with a delay, the task will initially sleep
until that time has passed, before attempting to acquire a token and
run.

Even if the task must snooze() until tokens are available, it will not
begin compacting until the desired start time has been reached.

This separation makes it simpler to reason about how many tasks can run
at once.

Change-Id: I9d56edd52fc3ffca45357f10eef29ca6e3cfcfde

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-03-03 14:27:37.000000000
Message: 
Patch Set 3: Patch Set 2 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-03 14:47:14.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/12/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/tasks.h:18:10:
fatal error: "semaphore_bounded_task.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/12/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/12/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/tasks.h:18:10: error: "semaphore_bounded_task.h" file not found [clang-diagnostic-error]
#include "semaphore_bounded_task.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/12/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/tasks.h:18:10:
error: "semaphore_bounded_task.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/12/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/14/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\tasks.h(18): fatal error C1083: Cannot open include file: "semaphore_bounded_task.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/14/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/12/ : FAILURE

Compile error at [2022-03-03T14:43:51.555Z] ../kv_engine/engines/ep/src/tasks.h:18:10:
fatal error: "semaphore_bounded_task.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/12/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/12/ : FAILURE

Compile error at [2022-03-03T14:44:00.532Z] ../kv_engine/engines/ep/src/tasks.h:18:10:
fatal error: "semaphore_bounded_task.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/12/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/12/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/12/ : FAILURE

Compile error at [2022-03-03T14:46:00.840Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/tasks.h:18:10:
fatal error: semaphore_bounded_task.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/12/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/12/ : FAILURE

Compile error at [2022-03-03T14:44:07.633Z] ../kv_engine/engines/ep/src/tasks.h:18:10:
fatal error: "semaphore_bounded_task.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/12/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/7/ : FAILURE

Compile error at [2022-03-03T14:37:21.717Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/tasks.h:18:10:
fatal error: semaphore_bounded_task.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/7/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/13/ : FAILURE

Compile error at [2022-03-03T14:31:02.233Z] ../kv_engine/engines/ep/src/tasks.h:18:10:
fatal error: "semaphore_bounded_task.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/13/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14747/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
